--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/jquery": "^3.3.30",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "devicons": "^1.8.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "jquery.easing": "^1.4.1",
+    "popper.js": "^1.15.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-pwa": "^3.9.0",
     "@vue/cli-plugin-typescript": "^3.9.0",
