--- a/config/config.json
+++ b/config/config.json
@@ -79,9 +79,9 @@
       "startDate": "June 2019",
       "endDate": "August 2019",
       "bullets": [
-        "Hi",
-        "Hi 2",
-        "Hi 3"
+        "Developed in Angular 7 on the next generation of the PI Visualization software, working on UI, data processing, and testing areas",
+        "Worked in an Agile - Scrum environment, including running stand-ups for a team of 9 and presenting at project-wide sprint review meetings",
+        "Completed an average of 15 Kanban-style effort points per sprint, improving the team's average velocity metric by 17%"
       ]
     },
     {
@@ -89,10 +89,9 @@
       "company": "PwC Czech Republic",
       "startDate": "May 2019",
       "endDate": "June 2019",
-      "description": [
-        {
-          "text": "After finishing my undergraduate degree in 3.5 years, I will continue at Lehigh to complete and finish a graduate degree in Computer Science in one semester."
-        }
+      "bullets": [
+        "Evaluated different enterprise blockchain and distributed ledger technology solutions for internal and external use for PwC Czech Republic’s Assurance department",
+        "Developed a plugin using VBA and Hyperledger Composer for Microsoft Excel that allows for workbooks to export to and import from a distributed Hyperledger Fabric network"
       ]
     },
     {
@@ -100,9 +99,10 @@
       "company": "Commvault",
       "startDate": "September 2016",
       "endDate": "January 2017",
-      "description": [{
-        "text": "After finishing my undergraduate degree in 3.5 years, I will continue at Lehigh to complete and finish a graduate degree in Computer Science in one semester."
-      }]
+      "bullets": [
+        "Developed localization script for global logistical reporting using Python’s XML ElementTree",
+        "Detected and analyzed coding bugs and algorithmic efficiency in pre-existing programs"
+      ]
     }
   ],
   "skills": {
